# ASD

./: CMakeLists.txt  README.md
ABR/ABRSommaChiavi/: ABRnode.h  BST.h  main  main.cpp
ABR/ABRSommaChiaviPiccole/: main  main.cpp
ABR/ABRSommaFoglie/: main  main.cpp
ABR/ABRSuccessoreDispari/: main  main.cpp
ABR/BinarySearchTree/: ABRnode.h  BinarySearchTree.h  main  main.cpp
AziendaInBorsa/: Quotazione.cpp
BlockChain/: Block.h  BlockChain.cpp  LinkedList.h  Node.h  Transazione.h
BubbleSort/: Bubble.h  BubbleVect.h  main.cpp  mainVect.cpp
BucketSort/: BucketSort.h  main  main.cpp
CountingSort/CountingSortCormen/: CountingSort.h  main  main.cpp
CountingSort/CountingSortVector/: CountingSort.h  main.cpp
CountingSort/SubString/: Substring.h  main  main.cpp
ExAlias/: Alias.cpp
ExIterator/: Iterator.cpp
ExList/: List.cpp
ExMap/: Map.cpp
ExOverloading/: Overloading.cpp
ExString/: StringExample.cpp
ExVector/: Vector.cpp
GiocoDel15/: Checker.h  Gioco.cpp
Heap/HeapSort/: HeapSort.h  main  main.cpp
Heap/IsHeap/: IsHeap.h  Test  Test.cpp
Heap/MaxHeap/: MaxHeap.h  main  main.cpp
Heap/MaxKHeap/: MaxKappa.h  main  main.cpp
Heap/MinHeap/: MinHeap.h  TestMinHeap  TestMinHeap.cpp
Heap/MinKHeap/: MinKappa.h  main  main.cpp
HelloWorld/: HelloWorld.cpp
IOstring/: Fstream.cpp  InputOutput.cpp  Open&Close.cpp  ReadFile.cpp  getLine.cpp  iosbegFile.cpp
Indovinello/: Anfora.h  Contenitore.h  Indovinello.h  Test.cpp
InsertionSort/: InsertionSort.h  InsertionSortVector.h  main.cpp  mainInsVector.cpp
LinkedList/: Azienda.cpp  Impiegato.h  LinkedList.h  Manager.h  Node.h
MergeSort/: MergeSort.h  MergeTest.cpp
MergeSort/MergeSortRecursive/: MergeRecursive.h  TestRecursive.cpp
MergeSort/MergeSortVector/: MergeVector.h  TestMergeVector.cpp
OverloadOperator/: Operator+.cpp  Operator+.h
Polimorfismo/: ExPolymorf.cpp  Person.cpp  Persona.h  Polymorf.h
PriorityQueue/Esercizio01/: MinHeap.h  MinPriorityQueue.h  main  main.cpp
PriorityQueue/Esercizio02/: MaxHeap.h  MaxPriorityQueue.h  main  main.cpp
PriorityQueue/MaxPriorityQueue/: MaxHeap.h  MaxPriorityQueue.h  main  main.cpp
PriorityQueue/MinPriorityQueue/: MinHeap.h  MinPriorityQueue.h  main  main.cpp
QuickSort/QuickSortPivot/: QuickSort.h  TestQuickSort  TestQuickSort.cpp
QuickSort/QuickSortStack/: QuickSortStack.h  TestQuickStack  TestQuickStack.cpp
QuickSort/QuickSortVector/: QuickSortVector.h  TestQuickVector  TestQuickVector.cpp
RadixSort/: RadixSort.h  main  main.cpp
RispettaiVersi/: Checker.h  Gioco.cpp
Template/: ExTemplate.cpp  GenericStack.cpp  Stack.h
Thread/: Thread.cpp
WordCount/: CheckerOccorrenze.h  main.cpp
